force-app/main/default/objects/Chamber_of_Commerce_Setting__mdt/Chamber_of_Commerce_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Chamber of Commerce Setting</label>
    <pluralLabel>Chamber of Commerce Settings</pluralLabel>
</CustomObject>