force-app/main/default/objects/Chamber_of_Commerce_Setting__mdt/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <label>Api Key</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>