force-app/main/default/objects/Chamber_of_Commerce_Setting__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>