force-app/main/default/objects/Chamber_of_Commerce_Setting__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
                <default>true</default>
                <label>test</label>
            </value>
            <value>
                <fullName>prod</fullName>
                <label>production</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>